# nmd_android

./: NOTICE  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/org/nopeforge/nmd_android/: AspectRatioFrameLayout.java  MainActivity.java  MediaCodecVideoDecoder.java  MediaCodecVideoDecoder2.java  MyApplication.java  NopeMD.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
nmd_native/: build.gradle
nmd_native/src/main/: AndroidManifest.xml
nmd_native/src/main/cpp/: CMakeLists.txt  nmd.c
tools/: test_decode  test_seek
